--- a/src/main.scss
+++ b/src/main.scss
@@ -1,5 +1,5 @@
 // ==== base =========
-// @import "scss/_varaibles.scss";
+@import "scss/_variables.scss";
 // @import "scss/_prefix.scss";
 // @import "scss/_animation.scss";
 @import "scss/_reset.scss";
