--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,1 +1,3 @@
-$main_font PingFangTC-Regular, sans-serif;
+$main_font_r:'PingFangTC-Regular', sans-serif;
+$main_font_Light:'PingFangTC-Light', sans-serif;
+$main_font_Thin:'PingFangTC-Thin', sans-serif;
