--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,3 +1,4 @@
+$main_font:'PingFangTC', sans-serif;
 $main_font_r:'PingFangTC-Regular', sans-serif;
 $main_font_Light:'PingFangTC-Light', sans-serif;
 $main_font_Thin:'PingFangTC-Thin', sans-serif;
