add start_today area

--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,4 +1,10 @@
+//base
+$wrap_w: 1366px;
+
+//font-family
 $main_font:'PingFangTC', sans-serif;
 $main_font_r:'PingFangTC-Regular', sans-serif;
 $main_font_Light:'PingFangTC-Light', sans-serif;
 $main_font_Thin:'PingFangTC-Thin', sans-serif;
+$main_font_Semibold:'PingFangTC-Semibold', sans-serif;
+
