--- a/src/scss/_mixin.scss
+++ b/src/scss/_mixin.scss
@@ -1,7 +1,7 @@
 // ==== base =========
 
 @mixin index_h1{
-	width: 582px;
+	width: 630px;
 	text-align: center;
 	margin: 0 auto;
 	padding-bottom: 10px;
@@ -11,6 +11,8 @@
 	letter-spacing: 2.5px;
 	display: block;
 }
+
+@mixin center{margin-left: auto;margin-right: auto;}
 
 
 
