--- a/src/main.scss
+++ b/src/main.scss
@@ -4,7 +4,7 @@
 @import "scss/_position.scss";
 @import "scss/_mixin.scss";
 // @import "scss/_prefix.scss";
-// @import "scss/_animation.scss";
+@import "scss/_animation.scss";
 // @import "scss/_base.scss";
 // @import "scss/_buttons.scss";
 // @import "scss/_space.scss";
