--- a/src/main.scss
+++ b/src/main.scss
@@ -6,7 +6,7 @@
 // @import "scss/_prefix.scss";
 @import "scss/_animation.scss";
 // @import "scss/_base.scss";
-// @import "scss/_buttons.scss";
+@import "scss/_buttons.scss";
 // @import "scss/_space.scss";
 // @import "scss/_color.scss";
 // @import "scss/_breakpoint.scss";
@@ -14,5 +14,7 @@
 a{
 	text-decoration: none;
 	cursor: pointer;
-	&:hover{text-decoration: none;}
+	color: inherit;
+	&:hover{color: inherit;text-decoration: none;}
 }
+
