--- a/src/scss/_buttons.scss
+++ b/src/scss/_buttons.scss
@@ -12,6 +12,9 @@
   border-radius: 40px;
   color: #fff;
   box-shadow: 1px 5px 15px 0 rgba(0, 0, 0, 0.25);
+  &:hover{
+  	color: #fff;
+  }
 }
 
 
