--- a/src/scss/_animation.scss
+++ b/src/scss/_animation.scss
@@ -21,8 +21,17 @@
 }
 
 @keyframes flash{
-  50%{
+  0%{
+    opacity: .1;
+  }
+  10%{
     opacity: 1;
+  }
+  11%{
+    opacity: .1;
+  }
+  100%{
+    opacity: .1;
   }
 }
 
